<resources>
    <string name="app_name">ToDoApplication</string>
    <string name="search_item">Search Item</string>
    <string name="add">Add Item</string>
    <string name="TodoList">Todo List</string>
    <string name="hintadd">Add Item</string>
    <string name="hint_description">Description</string>
    <string name="NewTodo">New Todo Item</string>
    <string name="hint_title">Title</string>
    <string name="hintcancel">Cancel</string>
    <string name="hintdone">Done</string>
</resources>