<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".activity.DeviceImeiNoActivity">

        <RelativeLayout
            android:id="@+id/relative_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin10"
                android:text="@string/NewTodo"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp18" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linerRecyler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_header"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical"

            >

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:background="@drawable/noradious"

                android:hint="@string/hint_title"
                android:padding="@dimen/dp_10" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_5"
                android:background="@drawable/noradious"
                android:minLines="8"
                android:maxLines="10"
                android:gravity="start"

                android:hint="@string/hint_description"
                android:padding="@dimen/dp_10" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btncencel"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hintcancel"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="10dp"
                android:textColor="@color/white"
                app:rippleColor="@color/colorPrimary"
                app:strokeColor="@color/white"
                android:layout_alignParentLeft="true"
                app:strokeWidth="2dp"
                android:layout_marginLeft="@dimen/margin5dp"/>
            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hintdone"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="10dp"
                android:textColor="@color/white"
                app:rippleColor="@color/colorPrimary"
                app:strokeColor="@color/white"
                android:layout_alignParentEnd="true"
                app:strokeWidth="2dp"
                android:layout_marginLeft="@dimen/margin5dp"/>
        </RelativeLayout>
    </RelativeLayout>
</layout>