<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/white"
        tools:context=".activity.DeviceImeiNoActivity">

<RelativeLayout
    android:id="@+id/relative_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TodoList"
        android:textSize="@dimen/sp18"
        android:gravity="center"
        android:padding="@dimen/margin10"
        android:textColor="@color/colorPrimary"/>
    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
       android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/hintadd"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="10dp"
        app:rippleColor="@color/colorPrimary"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin5dp"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>

        <LinearLayout
            android:id="@+id/linerRecyler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/relative_header"
            android:layout_marginTop="@dimen/margin10"

            >

            <EditText
                android:id="@+id/editSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_item"
                android:background="@drawable/myradiousbackground"
                android:padding="@dimen/dp_10"
                android:drawableEnd="@drawable/ic_baseline_search_24"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"/>





            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_10" />

        </LinearLayout>





    </RelativeLayout>
</layout>